--- a/k8s_deployment/deployment.yaml
+++ b/k8s_deployment/deployment.yaml
@@ -1,67 +1,138 @@
+# =====================================================================
+# PERSISTENT VOLUME CLAIM (UPLOADS / STATIC FILES)
+# =====================================================================
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: kissankonnect-pvc
+  namespace: "2401152"
+spec:
+  storageClassName: local-path
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+# =====================================================================
+# DEPLOYMENT
+# =====================================================================
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kissankonnect-app
-  namespace: 2401152
-  labels:
-    app: kissankonnect-app
-
+  name: kissankonnect-deployment
+  namespace: "2401152"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: kissankonnect-app
-
+      app: kissankonnect
   template:
     metadata:
       labels:
-        app: kissankonnect-app
-
+        app: kissankonnect
     spec:
+      imagePullSecrets:
+        - name: nexus-secret
+
       containers:
-        - name: kissankonnect-app
+        - name: kissankonnect-container
           image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401152/kissankonnect:latest
           imagePullPolicy: Always
 
           ports:
-            - containerPort: 80   # PHP/Apache container uses port 80
+            - containerPort: 80
 
           env:
-            - name: APP_ENV
-              value: "production"
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: DB_HOST
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: DB_USER
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: DB_PASSWORD
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: DB_NAME
 
-          # liveness probe
-          livenessProbe:
-            httpGet:
-              path: /
-              port: 80
-            initialDelaySeconds: 10
-            periodSeconds: 15
+          volumeMounts:
+            - name: kissankonnect-storage
+              mountPath: /var/www/html/uploads
 
-          # readiness probe
           readinessProbe:
             httpGet:
               path: /
               port: 80
-            initialDelaySeconds: 5
+            initialDelaySeconds: 10
             periodSeconds: 10
 
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 80
+            initialDelaySeconds: 30
+            periodSeconds: 30
+
+          resources:
+            requests:
+              cpu: "250m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
+
+      volumes:
+        - name: kissankonnect-storage
+          persistentVolumeClaim:
+            claimName: kissankonnect-pvc
 ---
+# =====================================================================
+# SERVICE
+# =====================================================================
 apiVersion: v1
 kind: Service
 metadata:
   name: kissankonnect-service
-  namespace: 2401152
-  labels:
-    app: kissankonnect-app
-
+  namespace: "2401152"
 spec:
   selector:
-    app: kissankonnect-app
-
-  type: ClusterIP
-
+    app: kissankonnect
   ports:
-    - name: http
+    - protocol: TCP
       port: 80
       targetPort: 80
+  type: ClusterIP
+---
+# =====================================================================
+# INGRESS
+# =====================================================================
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: kissankonnect-ingress
+  namespace: "2401152"
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: kissankonnect.imcc.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: kissankonnect-service
+                port:
+                  number: 80
