--- a/k8s_deployment/deployment.yaml
+++ b/k8s_deployment/deployment.yaml
@@ -38,33 +38,33 @@ spec:
       containers:
         - name: kissankonnect
           # Use IP of Nexus registry instead of DNS to fix ImagePullBackOff
-          image: 127.0.0.1:30085/2401152/kissankonnect:latest
+          image: 192.168.20.250:30085/2401152/kissankonnect:latest
           imagePullPolicy: Always
 
           ports:
             - containerPort: 80
 
           env:
-            - name: DB_HOST
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: DB_HOST
-            - name: DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: DB_USER
-            - name: DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: DB_PASSWORD
-            - name: DB_NAME
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: DB_NAME
+          - name: DB_HOST
+            valueFrom:
+              secretKeyRef:
+                name: mysql-app-secret
+                key: DB_HOST
+          - name: DB_USER
+            valueFrom:
+              secretKeyRef:
+                name: mysql-app-secret
+                key: DB_USER
+          - name: DB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mysql-app-secret
+                key: DB_PASSWORD
+          - name: DB_NAME
+            valueFrom:
+              secretKeyRef:
+                name: mysql-app-secret
+                key: DB_NAME
 
           volumeMounts:
             - name: kissankonnect-storage
