--- a/k8s_deployment/mysql-service.yaml
+++ b/k8s_deployment/mysql-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
-  namespace: 2401152
+  namespace: "2401152"
 spec:
   selector:
     app: mysql
